--- a/2_CSS/css/06_레이아웃스타일.css
+++ b/2_CSS/css/06_레이아웃스타일.css
@@ -61,7 +61,7 @@
   margin-left: 20px;
   /* 위/아래 : 50px , 좌/우 : 30px */
   margin: 50px 30px;
-  /* 상 후 하 좌 */
+  /* 상 우 하 좌 */
   margin: 30px 50px 20px 40px;
 }
 
@@ -139,5 +139,20 @@
   bottom: 10px;
   width: 100px;
   height: 100px;
-  background-color: blue;
+  background-color: orangered;
+}
+
+/* visibility */
+.visibility {
+  width: 100px;
+  height: 100px;
+  border: 1px solid;
+}
+#vis1 {
+  visibility: hidden;
+  /* display: none; */
+  background-color: beige;
+}
+#vis2 {
+  background-color: skyblue;
 }
