--- a/2_CSS/css/06_레이아웃스타일.css
+++ b/2_CSS/css/06_레이아웃스타일.css
@@ -156,3 +156,31 @@
 #vis2 {
   background-color: skyblue;
 }
+
+/* z-index */
+#z-outer {
+  position: relative;
+  height: 250px;
+}
+.z-index {
+  width: 150px;
+  height: 150px;
+  border: 1px solid;
+  position: absolute;
+}
+#z-index1 {
+  background-color: orange;
+  top: 100px;
+  left: 100px;
+  z-index: 1;
+}
+#z-index2 {
+  background-color: blueviolet;
+  top: 50px;
+  left: 50px;
+  z-index: 999;
+}
+#z-index3 {
+  background-color: green;
+  z-index: -1;
+}
