--- a/2_CSS/css/08_플렉스박스.css
+++ b/2_CSS/css/08_플렉스박스.css
@@ -65,9 +65,11 @@
 }
 .item:nth-child(4) {
   /* flex-grow: 3; */
+  order: 0;
 }
 .item:nth-child(5) {
   /* flex-grow: 1; */
+  order: 4;
 }
 
 .item img {
