--- a/2_CSS/css/레이아웃연습.css
+++ b/2_CSS/css/레이아웃연습.css
@@ -1,19 +1,25 @@
-body {
-  background-color: lightgreen;
+@media screen and (min-width: 600px) {
+  h2 {
+    background-color: lightcoral;
+    font-size: larger;
+  }
+
+  p {
+    color: aquamarine;
+    background-color: lightyellow;
+  }
+
+  #style1 {
+    width: 40%;
+  }
+  #style2 {
+    width: 60%;
+  }
 }
 
-.profile-zone {
-  background-color: white;
-  width: 300px;
-  text-align: center;
-  padding: 20px;
-  border-radius: 10px;
-  text-decoration: none;
-}
-
-img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 50%;
+@media screen and (min-width: 900px) {
+  p {
+    color: rebeccapurple;
+    background-color: navajowhite;
+  }
 }
