--- a/2_CSS/css/09_그리드.css
+++ b/2_CSS/css/09_그리드.css
@@ -24,7 +24,7 @@
   gap: 10px;
 
   /* 5. grid-auto-rows */
-  /* grid-auto-rows: minmax(200px, auto); */
+  /* 6. justify-items, align-items */
 }
 
 .item {
