--- a/2_CSS/css/실습문제1.css
+++ b/2_CSS/css/실습문제1.css
@@ -1,39 +1,44 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 body {
   background-color: coral;
+  width: 100%;
+  height: 100vh;
+  text-align: center;
 }
 
-.profile-card {
+.profileCard {
+  margin: auto;
+  margin-top: 30px;
+  width: 400px;
+  height: fit-content;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: white;
-  width: 300px;
-  margin: 50px auto;
   border-radius: 10px;
 }
 
 img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
   border-radius: 50%;
-  width: 200px;
-  height: 200px;
-  margin: 20px;
+  margin-bottom: 10px;
 }
 
 h1 {
-  text-align: center;
-  margin-bottom: 50px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: gray;
+  margin-bottom: 20px;
 }
 
 a {
+  margin: auto;
   display: block;
-  text-decoration: none;
-  text-align: center;
   color: white;
   background-color: coral;
   width: 90%;
-  height: 50px;
-  margin-left: 15px;
-  margin-bottom: 10px;
+  height: 60px;
+  line-height: 60px;
+  margin-bottom: 5px;
+  border-radius: 5px;
 }
