--- a/practice/css/연습.css
+++ b/practice/css/연습.css
@@ -1,6 +1,65 @@
-div {
-  width: 500px;
-  height: 500px;
+header {
+  width: 100%;
+  height: 60px;
   background-color: white;
-  border: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+}
+
+header h1 {
+  margin-left: 20px;
+  font-size: 2rem;
+  font-weight: bold;
+}
+header a {
+  color: black;
+  margin-right: 20px;
+}
+
+main {
+  padding-top: 60px;
+}
+
+main div {
+  height: 100vh;
+}
+
+main div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+main div h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+main div p {
+  width: 70%;
+  text-align: center;
+}
+.top {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  width: 60px;
+  height: 60px;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30%;
+}
+#section1 {
+  background-color: red;
+}
+#section2 {
+  background-color: purple;
+}
+#section3 {
+  background-color: yellow;
 }
