--- a/practice/css/연습2.css
+++ b/practice/css/연습2.css
@@ -1,27 +1,62 @@
-img {
-  width: 100px;
-}
-
 header {
   width: 400px;
   height: 100vh;
-  background-color: lightblue;
   position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-image: url(../../resources/background.jpg);
-  text-align: center;
+  background-position: center;
+  background-size: cover;
+}
+header::after {
+  background-color: black;
+  width: 400px;
+  height: 100vh;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0.5;
 }
 
+header h1 {
+  margin-top: 70px;
+  text-align: center;
+  color: white;
+  font-size: 5rem;
+  text-decoration: underline 2px;
+  text-underline-offset: 20px;
+}
+header nav {
+  margin-bottom: 100px;
+}
 header nav a {
   display: flex;
   flex-direction: column;
-}
-header h1 {
-  margin-top: 60px;
-  font-size: 5rem;
-  font-weight: bold;
+  align-items: center;
+  color: white;
+  font-size: 2rem;
+  margin: 20px 0;
 }
 
 main {
   margin-left: 400px;
-  padding: 30px 20px;
+  padding: 20px 20px;
+  text-align: center;
+}
+main h2 {
+  font-weight: bold;
+  font-size: 3rem;
+  margin-bottom: 20px;
+  text-align: left;
+}
+main img {
+  width: 800px;
+  margin-bottom: 20px;
+}
+main p {
+  text-align: left;
+  line-height: 30px;
 }
